/**
 * Final Project. FactionResources class for storing the parameters of factions, such as the amount
 * of water, food, and troops available to the faction
 *
 * @author Nikita Kozino
 * @email kozino@bu.edu
 * @version 1.0
 * @since 2020-04-15
 */
package edu.bu.met.cs665;

public class FactionsResources {
  public static int outcastsTroops = 40;
  protected static String factionNameB = "Bandits";
  protected static int banditsWater = 60;
  protected static int banditsFood = 400;
  protected static int banditsTroops = 80;
  protected static String factionNameO = "Outcasts";
  protected static int outcastsWater = 50;
  protected static int outcastsFood = 200;
  protected static String factionNameU = "Ultra Wealthy";
  protected static int wealthyWater = 400;
  protected static int wealthyFood = 700;
  protected static int wealthyTroops = 65;
}
